--- a/api/build.gradle
+++ b/api/build.gradle
@@ -14,6 +14,14 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+
+    sourceSets {
+        main {
+            java.srcDirs += 'src/main/kotlin'
+            kotlin.srcDirs += 'src/main/kotlin'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
