--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs += ['src/main/java', 'src/main/kotlin']
+            java.srcDirs += 'src/main/kotlin'
             kotlin.srcDirs += 'src/main/kotlin'
         }
     }
